# alphacore

./: .env.example  .gitignore  MINER.md  README.md  VALIDATOR-API.md  VALIDATOR.md  VERSION  __init__.py  gcp-creds.json.example
modules/: .env.example  .env.template  __init__.py  conftest.py  models.py  pyproject.toml  pytest.ini  requirements.txt  task_config.yaml
modules/evaluation/: __init__.py  evaluator.py
modules/evaluation/validation/: __init__.py  models.py  resource_validators.py  state_parser.py  task_validator.py
modules/generation/: __init__.py  file_repository.py  generator.py  hello_gpt5mini.py  instructions.py  pipeline.py  repository.py  yaml_config.py
modules/generation/terraform/: registry.py  (+1 more)
modules/tests/: test_aws_tasks.py.skip  test_azure_tasks.py.skip  test_file_task_repository.py  test_gcp_cloud_scheduler_job.py  test_gcp_composition_logic.py  test_gcp_custom_iam_role.py  test_gcp_dns_record_set.py  test_gcp_error_handling.py  test_gcp_logging_project_sink.py  test_gcp_resource_templates.py  test_gcp_secret_manager.py  test_gcp_service_account_iam_member.py  test_gcp_tasks.py  test_instruction_generator.py  test_instruction_generator_integration.py  test_integration.py  test_miner.py  test_miner_advanced.py  test_task_bank_repository_integration.py  test_task_config_filtering.py  test_task_repository.py  test_terraform_gcp_tasks.py  test_validator.py  test_validator_advanced.py  test_validator_mixins.py  test_validator_sandbox_controller.py  test_validator_sandbox_linting.py  test_validator_sandbox_rootfs.py
modules/tools/: test.sh
(+123 files in other folders)
